k8s/network-policies/allow-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend
  namespace: expensy
spec:
  podSelector:
    matchLabels:
      app: expensy-backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # NGINX -> Backend
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5000
    # Frontend -> Backend
    - from:
        - podSelector:
            matchLabels:
              app: expensy-frontend
      ports:
        - protocol: TCP
          port: 5000
  egress:
    # Backend -> MongoDB
    - to:
        - podSelector:
            matchLabels:
              role: mongo
      ports:
        - protocol: TCP
          port: 27017
    # Backend -> Redis
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
    # DNS
    - ports:
        - protocol: UDP
          port: 53
