k8s/network-policies/allow-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend
  namespace: expensy
spec:
  podSelector:
    matchLabels:
      app: expensy-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # NGINX -> Frontend
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 3000
  egress:
    # Frontend -> Backend
    - to:
        - podSelector:
            matchLabels:
              app: expensy-backend
      ports:
        - protocol: TCP
          port: 5000
    # DNS
    - ports:
        - protocol: UDP
          port: 53
